--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Restate | Home</title>
+    <title>Restate | About</title>
     <link rel="shortcut icon" href="img/logo.png" type="image/x-icon" />
     <script
       src="https://kit.fontawesome.com/c7dcac8717.js"
@@ -12,7 +12,7 @@
     ></script>
   </head>
   <body id="babout">
-    <nav class="flex align glassbg">
+    <nav class="flex align">
       <div class="container flex align">
         <div>
           <a href="index.html" class="flex row align"
@@ -50,6 +50,16 @@
         </p>
       </div>
     </article>
+
+    <div class="youtube-container flex align justify">
+      <iframe
+        src="https://www.youtube.com/embed/mk8gVPpqRJU"
+        title="YOU&#39;VE NEVER SEEN LUXURY HOMES LIKE THIS"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen
+      ></iframe>
+    </div>
 
     <article class="article-listings">
       <div class="article-container">
@@ -122,9 +132,9 @@
           <li>|</li>
           <li><a href="blog.html">Blog</a></li>
           <li>|</li>
-          <li>About</li>
+          <li><a href="about.html">About</a></li>
           <li>|</li>
-          <li>Contact</li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
 
         <ul class="business-info flex col">
@@ -171,5 +181,7 @@
         </div>
       </div>
     </footer>
+
+    <script src="main.js"></script>
   </body>
 </html>
