--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
     ></script>
   </head>
   <body id="bblog">
-    <nav class="flex align glassbg">
+    <nav class="flex align">
       <div class="container flex align">
         <div>
           <a href="index.html" class="flex row align"
@@ -28,6 +28,102 @@
         <i class="fa-solid fa-bars"></i>
       </div>
     </nav>
+
+    <header>
+      <figure>
+        <img src="img/destacada3.jpg" alt="" />
+        <figcaption>
+          <h1>Strategies for Maximizing Returns</h1>
+          <h3>by Adam Coldwell</h3>
+          <p>
+            Investing in luxury real estate requires careful consideration and
+            strategic planning. In this section, we delve into various
+            investment strategies that can help investors maximize their
+            returns. <br /><br />We explore concepts such as flipping high-end
+            properties, vacation rentals, and leveraging rental income for
+            growth. Additionally, we discuss the importance of conducting
+            thorough market research, building a strong network, and working
+            with experienced professionals in the luxury real estate industry.
+          </p>
+          <button class="button">Read More</button>
+        </figcaption>
+      </figure>
+    </header>
+
+    <main>
+      <article>
+        <figure>
+          <img src="img/blog4.jpg" alt="" />
+          <figcaption>
+            <h2>Interior Design Elegance: The Power of Exquisite Details</h2>
+            <p>
+              The interior design of luxury real estate is an art form in
+              itself. We explore the meticulous craftsmanship, custom finishes,
+              and carefully curated furnishings that transform lavish spaces
+              into havens of elegance. <br /><br />From luxurious materials and
+              textures to unique design elements, we unveil the secrets behind
+              creating unforgettable interiors.
+            </p>
+            <button class="button">Read More</button>
+          </figcaption>
+        </figure>
+      </article>
+
+      <div class="blog-cards">
+        <article class="blog-item container">
+          <figure>
+            <img src="img/blog2.jpg" alt="" />
+            <figcaption>
+              <h2>
+                Luxury Real Estate Investment: Exclusive Opportunities for
+                Maximum Returns
+              </h2>
+              <p>
+                Luxury real estate investment offers unique opportunities for
+                investors seeking both financial growth and a taste of opulent
+                living. In this article, we explore the world of luxury real
+                estate investment, highlighting exclusive opportunities for
+                maximum returns.
+              </p>
+              <button class="button">Read More</button>
+            </figcaption>
+          </figure>
+
+          <figure>
+            <img src="img/announcement5.jpg" alt="" />
+            <figcaption>
+              <h2>
+                Sustainable Luxury: Harmonizing Design and Environmental
+                Consciousness:
+              </h2>
+              <p>
+                Luxury real estate is embracing sustainable practices and
+                eco-friendly features. We shed light on how architects and
+                designers are incorporating green technologies, energy-efficient
+                systems, and sustainable materials into high-end properties.
+              </p>
+              <button class="button">Read More</button>
+            </figcaption>
+          </figure>
+
+          <figure>
+            <img src="img/announcement6.jpg " alt="" />
+            <figcaption>
+              <h2>The Fusion of Art and Real Estate:</h2>
+              <p>
+                Luxury properties often serve as galleries for showcasing
+                exceptional art collections. In this section, we explore the
+                integration of art into luxury real estate. We discuss the
+                growing trend of incorporating art installations, sculptures,
+                and curated pieces within these properties, elevating them to
+                the status of living art galleries.
+              </p>
+              <button class="button">Read More</button>
+            </figcaption>
+          </figure>
+        </article>
+      </div>
+    </main>
 
     <footer class="flex">
       <div class="backtotopbutton">
@@ -47,9 +143,9 @@
           <li>|</li>
           <li><a href="blog.html">Blog</a></li>
           <li>|</li>
-          <li>About</li>
+          <li><a href="about.html">About</a></li>
           <li>|</li>
-          <li>Contact</li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
 
         <ul class="business-info flex col">
@@ -96,5 +192,7 @@
         </div>
       </div>
     </footer>
+
+    <script src="main.js"></script>
   </body>
 </html>
