--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Restate | Home</title>
+    <title>Restate | Contact</title>
     <link rel="shortcut icon" href="img/logo.png" type="image/x-icon" />
     <script
       src="https://kit.fontawesome.com/c7dcac8717.js"
@@ -12,7 +12,7 @@
     ></script>
   </head>
   <body id="bcontact">
-    <nav class="flex align glassbg">
+    <nav class="flex align">
       <div class="container flex align">
         <div>
           <a href="index.html" class="flex row align"
@@ -207,9 +207,9 @@
           <li>|</li>
           <li><a href="blog.html">Blog</a></li>
           <li>|</li>
-          <li>About</li>
+          <li><a href="about.html">About</a></li>
           <li>|</li>
-          <li>Contact</li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
 
         <ul class="business-info flex col">
