--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     ></script>
   </head>
   <body id="bindex">
-    <nav class="flex align glassbg">
+    <nav class="flex align">
       <div class="container flex align">
         <div>
           <a href="index.html" class="flex row align"
@@ -25,7 +25,62 @@
           <li><a href="blog.html">Blog</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
-        <i class="fa-solid fa-bars"></i>
+        <i id="ham-menu" class="fa-solid fa-bars"></i>
+      </div>
+
+      <div class="mobile-nav-modal hide">
+        <div class="flex col align justify">
+          <i class="fa-solid fa-circle-xmark" id="modal-close"></i>
+
+          <h1>RESTATE</h1>
+          <img src="img/logo.png" alt="" />
+
+          <hr />
+
+          <ul class="mobile flex col align justify">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+
+          <div class="nav-subscribe flex col align justify">
+            <label for="">Subscribe to our newsletter</label>
+            <div class="flex row">
+              <input type="text" placeholder="Enter your E-Mail" />
+              <button class="button">Submit</button>
+            </div>
+
+            <div class="nav-social-media">
+              <h3>
+                © 2023 Luxe Estates. All rights reserved. Luxe Estates is a
+                registered trademark of Prestige Holdings LLC.
+              </h3>
+              <ul class="flex row">
+                <li>
+                  <a href="https://facebook.com" target="_blank"
+                    ><i class="fa-brands fa-square-facebook"></i
+                  ></a>
+                </li>
+                <li>
+                  <a href="https://instagram.com" target="_blank"
+                    ><i class="fa-brands fa-square-instagram"></i
+                  ></a>
+                </li>
+                <li>
+                  <a href="https://twitter.com" target="_blank"
+                    ><i class="fa-brands fa-square-twitter"></i
+                  ></a>
+                </li>
+                <li>
+                  <a href="https://instagram.com" target="_blank"
+                    ><i class="fa-brands fa-square-instagram"></i
+                  ></a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
     </nav>
 
@@ -213,13 +268,11 @@
           </h2>
           <h3>By James Maxwell</h3>
           <p>
-            Unlock exclusive opportunities and amplify your wealth with luxury
-            real estate investments that offer exceptional returns and long-term
-            prosperity.
-            <br /><br />
-            Discover the world of luxury real estate investing, where
-            prestigious properties become your gateway to financial success and
-            unmatched lifestyle experiences.
+            Luxury real estate investment offers unique opportunities for
+            investors seeking both financial growth and a taste of opulent
+            living. <br /><br />In this article, we explore the world of luxury
+            real estate investment, highlighting exclusive opportunities for
+            maximum returns.
           </p>
           <a href="blog.html"><button class="button">read more</button></a>
         </figcaption>
@@ -244,9 +297,9 @@
           <li>|</li>
           <li><a href="blog.html">Blog</a></li>
           <li>|</li>
-          <li>About</li>
+          <li><a href="about.html">About</a></li>
           <li>|</li>
-          <li>Contact</li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
 
         <ul class="business-info flex col">
@@ -294,6 +347,6 @@
       </div>
     </footer>
 
-    <script src="index.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
