--- a/about.html
+++ b/about.html
@@ -25,7 +25,62 @@
           <li><a href="blog.html">Blog</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
-        <i class="fa-solid fa-bars"></i>
+        <i class="fa-solid fa-bars" id="ham-menu"></i>
+      </div>
+
+      <div class="mobile-nav-modal hide">
+        <div class="flex col align justify">
+          <i class="fa-solid fa-circle-xmark" id="modal-close"></i>
+
+          <h1>RESTATE</h1>
+          <img src="img/logo.png" alt="" />
+
+          <hr />
+
+          <ul class="mobile flex col align justify">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+
+          <div class="nav-subscribe flex col align justify">
+            <label for="">Subscribe to our newsletter</label>
+            <div class="flex row">
+              <input type="text" placeholder="Enter your E-Mail" />
+              <button class="button">Submit</button>
+            </div>
+
+            <div class="nav-social-media">
+              <h3>
+                © 2023 Luxe Estates. All rights reserved. Luxe Estates is a
+                registered trademark of Prestige Holdings LLC.
+              </h3>
+              <ul class="flex row">
+                <li>
+                  <a href="https://facebook.com" target="_blank"
+                    ><i class="fa-brands fa-square-facebook"></i
+                  ></a>
+                </li>
+                <li>
+                  <a href="https://instagram.com" target="_blank"
+                    ><i class="fa-brands fa-square-instagram"></i
+                  ></a>
+                </li>
+                <li>
+                  <a href="https://twitter.com" target="_blank"
+                    ><i class="fa-brands fa-square-twitter"></i
+                  ></a>
+                </li>
+                <li>
+                  <a href="https://instagram.com" target="_blank"
+                    ><i class="fa-brands fa-square-instagram"></i
+                  ></a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
     </nav>
 
