--- a/index.html
+++ b/index.html
@@ -84,6 +84,31 @@
       </div>
     </nav>
 
+    <div id="house-details-modal" class="modal-window hide">
+      <div class="inner-modal flex col">
+        <i class="fa-solid fa-circle-xmark" id="details-modal-close"></i>
+        <img id="home-img" src="img/announcement3.jpg" alt="">
+        <h2 id="home-price">$6,500,000</h2>
+        <h3 id="home-name">Palazzo</h2>
+        <span id="home-loc"><i class="fa-solid fa-location-dot"></i> Los Angeles, CA</span>
+        <div class="flex row align">
+            <ul>
+              <li id="home-area"><i class="fa-solid fa-ruler-combined"></i>4,233 ft<sup>2</sup></li>
+              <li id="home-built"><i class="fa-solid fa-building-user"></i>Built 2002</li>
+            </ul>
+            <ul>
+              <li id="home-beds"><i class="fa-solid fa-bed"></i>8 Beds</li>
+              <li id="home-baths"><i class="fa-solid fa-bath"></i>6 Baths</li>
+            </ul>
+        </div>
+        <p id="home-desc">
+          Indulge in the ultimate coastal retreat with this exquisite modern mansion, offering panoramic ocean views and opulent amenities.<br /><br />Experience timeless elegance and unparalleled luxury living in this prestigious property, a true masterpiece of coastal opulence.
+        </p>
+      </div>
+    </div>
+
+    <div class="modal-submit"></div>
+
     <header class="flex align col justify">
       <h2>
         We sell <br /><span>luxury houses,</span> <span>condominiums,</span>
@@ -348,7 +373,5 @@
     </footer>
 
     <script src="main.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.0/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.0/ScrollTrigger.min.js"></script>
-  </body>
+   <script src="index.js"></script>
 </html>
